FP-891 fix external workbench access disrupted by onboarding (#358)
* Change only loading part of state when fetching workbench

* Pass context data which has setup_complete

* Handle anonymous users

* Add unit tests

* Build/install client during CI to generate templates

* Add build client step for template generation to CI

* Refactor github actions to client install is defined in standalone action

* Run actions/checkout in local action

* Fix action name/path

* Revert attempt at composite action

Not supported yet: https://github.com/actions/runner/issues/646

* Copy template for unit testing instead of client building it

* Fix copy command

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,7 @@ jobs:
     - name: Run Server-side unit tests and generate coverage report
       run: |
         cd server
+        cp portal/apps/workbench/templates/portal/apps/workbench/index.j2 portal/apps/workbench/templates/portal/apps/workbench/index.html
         poetry run pytest --cov-config=.coveragerc --cov=portal --cov-report=xml -ra
 
     - name: Upload coverage to Codecov
